<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/actionSortByName"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/actionSortByDate"
                android:title="@string/sort_by_date" />
        </menu>
    </item>

    <item
        android:id="@+id/actionHideCompleted"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionDeleteCompleted"
        android:title="@string/delete_completed"
        app:showAsAction="never" />
</menu>