<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.task_details_screen.ui.TaskDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/etTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/cbImportantTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/important_task" />

        <TextView
            android:id="@+id/tvPostDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Date created:" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/save_task"
        android:src="@drawable/ic_done" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>